Add inputs and button

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "router/*": ["src/router/*"],
       "components/*": ["src/components/*"],
       "style/*": ["src/style/*"],
-      "lib/*": ["src/lib/*"]
+      "lib/*": ["src/lib/*"],
+      "layouts/*": ["src/layouts/*"],
     }
   },
   "include": ["src"],
