--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.5.0",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.2",
